--- a/web-app/src/Components/Sidebar/sidebar.css
+++ b/web-app/src/Components/Sidebar/sidebar.css
@@ -3,27 +3,31 @@
   flex-direction: column;
   height: 100vh;
   box-shadow: 4px 0 4px -2px rgba(0, 0, 0, 0.25);
-  width:230px ;
+  width: 230px;
   position: fixed;
   top: 0;
   transition: 0.1s ease-in;
-  
+
 }
 
 .sidebar main {
   width: 100%;
   padding: 70px;
 }
+
 .sidebar {
   background: #ff8323;
   color: white;
   min-height: 100%;
 }
+
 .top-section {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 2rem;
 }
+
 .link {
   display: flex;
   align-items: center;
@@ -117,7 +121,8 @@
   }
 
   .sidebar.open {
-    width: 205px; /* Adjust the width as needed */
+    width: 205px;
+    /* Adjust the width as needed */
     overflow-y: auto;
     z-index: 1;
     overflow-x: hidden;
@@ -135,7 +140,7 @@
     color: black;
   }
 
-  .menu-icon.open{
+  .menu-icon.open {
     color: #ff8323;
   }
 
