--- a/web-app/src/Pages/dashboard/pages/menu/menu.css
+++ b/web-app/src/Pages/dashboard/pages/menu/menu.css
@@ -1,26 +1,27 @@
 .menu-section {
-  margin: 2rem 2rem;
+  inline-size: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu-inline {
+  block-size: 90%;
+  inline-size: 80%;
 }
 
 .menu-title {
-  margin-left: 2rem;
-  margin-bottom: 2rem;
-  width: 70vw;
-  margin-left: 70px;
+  margin-block: 2rem;
+  width: 75vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
 .menu-table {
-  height: 80vh;
-  align-items: center;
-  width: 70vw;
-  margin-left: 70px;
+  height: 70vh;
+  width: 75vw;
   border: 2px solid transparent;
   border-radius: 10px;
   box-shadow: 2px 2px 5px rgb(154, 153, 153);
@@ -95,6 +96,7 @@
 .menu-img {
   width: 50px;
 }
+
 .menu-input-img {
   display: flex;
   height: 200px;
@@ -110,7 +112,7 @@
   right: 0.5rem;
 }
 
-.img-display:not(:empty) + .Image1 {
+.img-display:not(:empty)+.Image1 {
   display: none;
 }
 
@@ -165,6 +167,7 @@ th {
   border-bottom: 0.1px solid rgba(0, 0, 0, 0.2);
   border-right: 0.1px solid rgba(0, 0, 0, 0.2);
 }
+
 .menu-table tr {
   cursor: pointer;
 }
@@ -179,6 +182,7 @@ td {
 .menu-table p {
   font-size: 10px;
 }
+
 .menu-table .btns {
   width: 100%;
   display: flex;
@@ -202,8 +206,8 @@ td {
   display: flex;
   flex-direction: column;
   align-items: center;
-  top: 5%;
-  left: 45%;
+  top: 15vh;
+  left: 40vw;
 }
 
 .empty-menu h1 {
@@ -214,25 +218,25 @@ td {
   .menu-btn {
     text-align: center;
   }
-  
+
   .menu-link {
     display: block;
   }
-  
+
   table {
     width: 100%;
   }
-  
+
   th {
     font-size: 14px;
   }
-  
+
   .empty-menu {
     margin-top: 10px;
-    
-    
+
+
   }
-  
+
   .menu-content {
     padding: 10px;
   }
@@ -246,5 +250,5 @@ td {
     margin-top: 10px;
   }
 
-  
+
 }
